--- a/w11-assignment/css/style.css
+++ b/w11-assignment/css/style.css
@@ -223,7 +223,16 @@ a {
   position: relative;
 }
 
-.collection-page .items .collection-item.image {
+.collection-page .items .collection-item:hover .image {
+  opacity: 0.8;
+}
+
+.collection-page .items .collection-item:hover .custom-button {
+  display: block;
+  opacity: 0.85;
+}
+
+.collection-page .items .collection-item .image {
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -247,5 +256,10 @@ a {
   width: 80%;
   position: absolute;
   top: 200px;
+  padding: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  opacity: 0.7;
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
