--- a/w11-assignment/css/style.scss
+++ b/w11-assignment/css/style.scss
@@ -155,7 +155,17 @@ a {
       margin-bottom: 25px;
       position: relative;
 
-      &.image {
+      &:hover {
+        .image {
+          opacity: 0.8;
+        }
+        .custom-button {
+          display: block;
+          opacity: 0.85;
+        }
+      }
+
+      .image {
         width: 100%;
         height: 100%;
         background-size: cover;
@@ -175,6 +185,11 @@ a {
         width: 80%;
         position: absolute;
         top: 200px;
+        padding: 10px;
+        font-size: 18px;
+        font-weight: bold;
+        opacity: 0.7;
+        display: none;
       }
     }
   }
